dex-app-deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: app
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
  selector:
    app: app
